k8s/cluster/apps/argocd.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: argocd
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`argocd.superfast-delivery.yashraj-jaiswal.site`)
      services:
        - kind: Service
          name: argocd-server
          port: 443
          serversTransport: dashboard-transport
  tls:
    secretName: argocd.superfast-delivery.yashraj-jaiswal.site
