k8s/cluster/apps/headlamp.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: headlamp
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`headlamp.superfast-delivery.yashraj-jaiswal.site`)
      services:
        - kind: Service
          name: headlamp
          port: 80
          scheme: http
  tls:
    secretName: headlamp.superfast-delivery.yashraj-jaiswal.site
