k8s/cluster/apps/traefik-dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: dashboard-basic-auth-creds

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: traefik
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`traefik.superfast-delivery.yashraj-jaiswal.site`)
      middlewares:
        - name: dashboard-basic-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik.superfast-delivery.yashraj-jaiswal.site
